--- a/ai-report/src/App.css
+++ b/ai-report/src/App.css
@@ -5,5 +5,7 @@ li {
 #navLinks {
     display: grid;
     border: solid 2px blueviolet;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: right;
+    gap: 1em;
 }
