--- a/ai-report/src/components/Governing/styles/Governing_container.scss
+++ b/ai-report/src/components/Governing/styles/Governing_container.scss
@@ -3,13 +3,34 @@
     padding: 0;
 }
 
+@mixin floating($side, $radiusLeft) {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-size: $font-size;
+      font-style: italic;
+      background-color: rgba(163, 156, 156, 0.2);
+      margin: 80px 0;
+      border-radius: $radiusLeft 0;
+      padding: 200px;
+      text-shadow: 2px 2px 0.5px black;
+      border:.5px solid rgba(255, 255, 255, 0.514);
+      box-shadow: 9px 9px 22px rgba(196, 196, 202, 0.541);
+        img {
+            float: $side;
+            margin: 50px;
+            box-shadow: 5px 5px 10px rgb(90, 81, 81);
+        }
+    
+        article {
+            padding: 10px;
+        }
+}
+
 $color-primary:white;
-$font-size:2rem;
+$font-size:2.1rem;
 
 .Main {
-
     width: 100vw;
-    height: 220vh;
+    height: 450vh;
     background-image: url('https://wallpaperaccess.com/full/1398312.jpg');
     background-attachment: fixed;
     background-size: cover;
@@ -23,23 +44,44 @@ $font-size:2rem;
     justify-content: center;
     align-items: center;
     padding: 100px 200px;
+    
     h2{
         text-align: center;
         font-size: 4rem;
         margin: 20px;
     }
 }
-.firstBlock {
-    font-size: $font-size;
-    img {
-        float: left;
-        margin: 50px;
-        border:2px solid green;
-        box-shadow:5px 5px 5px 1px grey;
+.firstBlock{
+    @include floating(left,40%);
+}
+.secondBlock{
+    @include floating(right,40%);
+}
+.thirdBlock{
+    @include floating(left,40%);
+}
+
+.videoLink {
+    display: flex; 
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin: 50px;
+}
+
+.links {
+    a{
+        display: inline-block;
+        text-decoration: none;
+        color: blue;
+        font-size: 1.8rem;
+        margin:40px;
+
+        &:hover{
+            color: burlywood;
+        }
+        &:visited {
+            color:red;
+        }
     }
 
-    article {
-        padding: 20px;
-    }
-    
 }
