--- a/ai-report/src/components/Governing/styles/Governing_container.scss
+++ b/ai-report/src/components/Governing/styles/Governing_container.scss
@@ -4,7 +4,7 @@
 }
 
 @mixin floating($side, $radiusLeft) {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-size: $font-size;
       font-style: italic;
       background-color: rgba(163, 156, 156, 0.2);
@@ -30,7 +30,7 @@ $font-size:2.1rem;
 
 .Main {
     width: 100vw;
-    height: 450%;
+    height: 550vw;
     background-image: url('https://wallpaperaccess.com/full/1398312.jpg');
     background-attachment: fixed;
     background-size: cover;
@@ -47,7 +47,7 @@ $font-size:2.1rem;
     
     h2{
         text-align: center;
-        font-size: 4rem;
+        font-size: 4em;
         margin: 20px;
     }
 }
@@ -63,9 +63,10 @@ $font-size:2.1rem;
 
 .videoLink {
     display: flex; 
+    flex-flow: wrap row;
     justify-content: space-evenly;
     align-items: flex-start;
-    margin: 50px;
+    margin: 5%;
 }
 
 .links {
