finished with header

--- a/ai-report/src/components/Ethics/styles/Ethics_header.scss
+++ b/ai-report/src/components/Ethics/styles/Ethics_header.scss
@@ -2,13 +2,19 @@
     padding: 0;
     margin: 0;
 }
+@import url('https://fonts.googleapis.com/css?family=Yellowtail&display=swap');
 
 $primary-color:rgba(206, 201, 201, 0.353);
 $primary-secondary:rgba(175, 163, 163, 0.853);
+$font-size:1.65em;
+
+@mixin statement($color) {
+    color: $color;
+    font-style: italic;
+    padding:3%;
+}
 
 .Header__main {
-    height: 80vh;
-    width: 100vw;
     background-color:$primary-color;
 }
 .Header__main-container {
@@ -18,21 +24,48 @@ $primary-secondary:rgba(175, 163, 163, 0.853);
     margin:0 auto;
     padding:3%;
     background-color:$primary-secondary;
+    h1{
+        font-family: 'Yellowtail', cursive;
+        font-size: 5em;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        letter-spacing: 0.1em;
+    }
+
     img:nth-child(3) {
         position: absolute;
-        left: -100px;
-        top: 40vh;
+        left: -5vw;
+        top: 50vh;
     }
+
     img:nth-child(4) {
         position: absolute;
         right: -100px;
-        top: 10vh;
+        top: 20vh;
     }
+
     img:nth-child(2) {
-        width: 50%;
-        height: 40%;
+        width: 55%;
+        height: 25%;
         position: absolute;
-        bottom: -15vh;
-        right: 10vw;
+        bottom: -5vh;
+        right: 18vw;
     }
+}
+
+.Header__main-container-article {
+    display: flex;
+    padding: 5%;
+    font-size: $font-size;
+    text-shadow: 1px 1px 0.5px rgb(105, 38, 38);
+    
+    color: rgb(80, 82, 63);
+        article:nth-child(1){
+            @include statement(rgb(161, 87, 26))
+        }
+        article:nth-child(2){
+            @include statement(rgb(124, 36, 36));
+            margin:20vh 0 0 -20vh;
+        }
 }
