--- a/ai-report/src/components/Ethics/styles/Ethics_container.scss
+++ b/ai-report/src/components/Ethics/styles/Ethics_container.scss
@@ -2,4 +2,87 @@
     padding: 0;
     margin: 0;
 }
+.father_container{
+    background-color: red;
+}
 
+@mixin headerAlign {
+    text-align: center;
+    margin: 15px;
+}
+
+.main_container {
+    background-color: rgb(204, 199, 190);
+    width: 86%;
+    margin: 0 auto;
+}
+.article_block {
+    width:70%;
+    
+    margin: 0 auto;
+}
+.first_block {
+    padding:200px 10px 10px 0px;
+    display: flex;
+    h2{
+        @include headerAlign()
+    }
+
+    div:nth-child(1) {
+        width: 60%;
+        height: 100%;
+    }
+    img {
+        width: 40%;
+        height: 100%;
+        margin:20px;
+    }
+}
+.second_block {
+    padding:0px 0px 10px 0px;
+    display: flex;
+    h2{
+        @include headerAlign()
+    }
+    div:nth-child(1) {
+        border: 2px solid green;
+        width: 40%;
+    } 
+    div:nth-child(2) {
+        padding: 2%;
+        width: 60%;
+        height: 100%;
+    }
+}
+.third_block {
+    padding:0px 0px 10px 0px;
+    display: flex;
+    h2{
+        @include headerAlign()
+    }
+    div:nth-child(1) {
+        border: 2px solid green;
+        width: 40%;
+    } 
+    div:nth-child(2) {
+        padding: 2%;
+        width: 60%;
+        height: 100%;
+    }
+}
+.fifth_block {
+    padding:0px 0px 10px 0px;
+    display: flex;
+    h2{
+        @include headerAlign()
+    }
+    div:nth-child(1) {
+        border: 2px solid green;
+        width: 60%;
+        padding: 2%;
+    } 
+    div:nth-child(2) {
+        width: 40%;
+        height: 100%;
+    }
+}
