--- a/ai-report/src/components/Ethics/styles/Ethics_container.scss
+++ b/ai-report/src/components/Ethics/styles/Ethics_container.scss
@@ -2,8 +2,14 @@
     padding: 0;
     margin: 0;
 }
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display&display=swap");
+
+$primary-color:rgba(156, 94, 75, 0.953);
+
 .father_container{
-    background-color: red;
+    background-image: url('https://blog.einstein.ai/content/images/2019/01/annie-spratt-746980b-unsplash.jpg');
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 @mixin headerAlign {
@@ -12,9 +18,12 @@
 }
 
 .main_container {
-    background-color: rgb(204, 199, 190);
+    font-family: 'Playfair Display', serif;
+    background-color:$primary-color;
     width: 86%;
     margin: 0 auto;
+    font-size: 1.4rem;
+    text-shadow: .1px .1px 0.1px rgb(161, 36, 36);
 }
 .article_block {
     width:70%;
@@ -22,6 +31,7 @@
     margin: 0 auto;
 }
 .first_block {
+    position: relative;
     padding:200px 10px 10px 0px;
     display: flex;
     h2{
@@ -29,13 +39,16 @@
     }
 
     div:nth-child(1) {
+
         width: 60%;
         height: 100%;
     }
     img {
-        width: 40%;
-        height: 100%;
-        margin:20px;
+        position: absolute;
+        right: -15%;
+        top: 35vh;
+        width: 50%;
+        height: 50%;
     }
 }
 .second_block {
