--- a/ai-report/src/components/Ethics/styles/Ethics_header.scss
+++ b/ai-report/src/components/Ethics/styles/Ethics_header.scss
@@ -3,14 +3,15 @@
     margin: 0;
 }
 @import url('https://fonts.googleapis.com/css?family=Yellowtail&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Dosis:500&display=swap"');
 
-$primary-color:rgba(206, 201, 201, 0.353);
-$primary-secondary:rgba(175, 163, 163, 0.853);
+$primary-color:rgba(206, 201, 201, 0.053);
+$primary-secondary:rgba(175, 163, 163, 0.953);
 $font-size:1.65em;
 
 @mixin statement($color) {
     color: $color;
-    font-style: italic;
+    font-family: 'Dosis', sans-serif;;
     padding:3%;
 }
 
@@ -36,7 +37,7 @@ $font-size:1.65em;
     img:nth-child(3) {
         position: absolute;
         left: -5vw;
-        top: 50vh;
+        top: 65vh;
     }
 
     img:nth-child(4) {
