--- a/ai-report/src/components/Governing/styles/Governing_container.scss
+++ b/ai-report/src/components/Governing/styles/Governing_container.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 }
+@import url("https://fonts.googleapis.com/css?family=Asap&display=swap");
 
 @mixin floating($side, $radiusLeft) {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -11,12 +12,13 @@
       margin: 80px 0;
       border-radius: $radiusLeft 0;
       padding: 9vw;
+      font-family: 'Asap', sans-serif;
       text-shadow: 2px 2px 0.5px black;
       border:.5px solid rgba(255, 255, 255, 0.514);
       box-shadow: 9px 9px 22px rgba(196, 196, 202, 0.541);
         img {
             float: $side;
-            margin: 50px;
+            margin: 10px;
             box-shadow: 5px 5px 10px rgb(90, 81, 81);
         }
     
@@ -34,6 +36,7 @@ $font-size:1rem;
     background-size: cover;
     background-repeat: no-repeat;
     color: $color-primary;
+    font-family: 'Indie Flower', cursive;
 }
 .Header {
     display:flex;
@@ -41,12 +44,12 @@ $font-size:1rem;
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    padding: 100px 200px;
+    padding: 10px 20px;
     
     h2{
         text-align: center;
         font-size: 2em;
-        margin: 20px;
+        margin: 10px;
     }
 }
 .firstBlock{
@@ -59,11 +62,13 @@ $font-size:1rem;
     @include floating(left,40%);
 }
 
-.videoLink {
+.videoLinking {
     display: flex; 
-    flex-flow: wrap row;
-    justify-content: space-evenly;
-    margin: 1%;
+    flex-flow:wrap row;
+    justify-content: space-between;
+    .videoLink{
+        margin: 10px auto;
+    }
 }
 
 .links {
